Add additional resources

--- a/_posts/2017-12-31-2018-in-review.md
+++ b/_posts/2017-12-31-2018-in-review.md
@@ -22,4 +22,4 @@ It's been quite a year - I started working at Ericsson in February, and in this 
 - Gain more knowledge of networking, so I can troubleshoot networking issues. I will use INE and the book Headfirst Networking to get started with this. 
 - Finish the [FreeCodeCamp](https://www.freecodecamp.org/sebbenbear) Front End development certification track (currently 60% done)
 - Get more comfortable with solving medium-level problems on [Hackerrank](www.hackerrank.com)
-- Learn more about system design - [Donnemartin's system design primer](https://github.com/donnemartin/system-design-primer) seems like a great place to start.
+- Learn more about system design - [Donnemartin's system design primer](https://github.com/donnemartin/system-design-primer) seems like a great place to start, as does [Hired In Tech](https://www.hiredintech.com/system-design/) and [Palantir's blog](http://www.palantir.com/2011/10/how-to-rock-a-systems-design-interview/)
