--- a/_posts/2017-12-31-2018-in-review.md
+++ b/_posts/2017-12-31-2018-in-review.md
@@ -28,7 +28,7 @@ My team won the People's Choice Award at SheHacks 2017 with our StyloSheBot chat
 
 Conferences I attended included Container Camp, Google Women Techmakers Summit, Oracle Code and Openstack Summit. I gained heaps of exposure to new technologies and met great people!
 
-### 2018 Goals
+## 2018 Goals
 
 Give at least one technical presentation to keep my presentation skills up (even though public speaking freaks me out!)
 
