Start quicksort post

--- a/_posts/2018-1-22-sorting.md
+++ b/_posts/2018-1-22-sorting.md
@@ -23,6 +23,38 @@ date: 2018-1-21
 
 ## Quick Sort
 
+Quick Sort is an example of a divide and conquer algorithm.
+
+Pick an element to be the pivot - this can be any random number that's an index somewhere in the middle of the array.
+
+```
+                     Pivot
+                       ↓
+[15, 3, 2, 1, 9, 5, 7, 8, 6]
+```
+
+Put a pointer at each end of the array. Using the left pointer, walk along the array until you get an element that is larger than the pivot value, and stop. Using the right pointer, walk down the array, until you get an element that is smaller than the pivot value. Now, swap the two elements. Keep doing this until the pointers meet in the middle. 
+
+This parts the array into two segments:
+
+The left portion of the array contains numbers less than or equal to the pivot.  
+The right portion of the array contains numbers greater than or equal to the pivot.
+
+```
+                 Pivot
+                   ↓
+[6, 3, 2, 1, 5, 9, 7, 8, 15]
+--------------  -----------
+   &lte pivot    &gte pivot 
+```
+
+Next, we use the same algorithm on each of the left and right portions of the array, selecting a new pivot.
+
+Best Case Time Complexity: O(n log n) - the pivot is very close to the middle each time.
+Average Case Time Complexity: O(n log n) - takes n log n time overall
+Worst Case Time Complexity: O(n<sup>2</sup>) - The pivot is in a silly place each time
+
+
 TODO: add some more sorts if I have time!
 
 - Heap Sort
