add notes for 1-22

--- a/_posts/2018-1-22-sorting.md
+++ b/_posts/2018-1-22-sorting.md
@@ -3,6 +3,11 @@ layout: post
 title: Sorting Algorithms
 date: 2018-1-21
 ---
+
+Being able to sort our data can make solving a wide range of problems much easier!
+These notes will cover a range of different sorting algorithms, along with some illustrations of how they work.
+<!--break-->
+
 ## Sorts
 
 | Algorithm | Worst Case Time Complexity | Average Case Time Complexity | Best Case Time Complexity | Space Complexity |
