add notes to 12-28, 12-31 and 1-4

--- a/_posts/2017-12-31-in-review.md
+++ b/_posts/2017-12-31-in-review.md
@@ -4,7 +4,9 @@ title: 2018 in Review
 date: 2017-12-31
 ---
 
-It's been quite a year - I started working at Ericsson Sydney in February. The culture and people there are really awesome - I really look forward to working with these excellent people each day. 
+It's been quite a year, and my first one working in tech full time! Here are a few of the things that particularly stood out to me this year. <!--break-->
+
+I started working at Ericsson Sydney in February. The culture and people there are really awesome - I really look forward to working with these excellent people each day. 
 
 ## Managed Services (7 months)
 
